--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
       - uses: actions/cache@v2
         with:
           path: |
-            ~/.nuget/packages
+            ~/
             C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          key: ${{ runner.os }}-dotnet
           restore-keys: |
-            ${{ runner.os }}-nuget-
+            ${{ runner.os }}-dotnet
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
@@ -36,10 +36,10 @@ jobs:
       - name: Install tools
         run: |
           dotnet workload restore
-        # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+     #     dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
-      # - name: Build
-      #   run: dotnet build --no-restore
+       - name: Build
+         run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-restore
