--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           path: |
             ~/
-            $env:LocalAppData\Microsoft\dotnet
-          #   C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
+            C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
           key: ${{ runner.os }}-dotnet-6.0.100
           restore-keys: |
             ${{ runner.os }}-dotnet-6.0.100
