--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,7 @@ jobs:
         # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
-      - name: Build
-        run: dotnet build --no-restore
+      # - name: Build
+      #   run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-restore
