--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,12 +11,21 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
+      - uses: actions/cache@v2
+        with:
+          path: |
+            C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
+          key: ${{ runner.os }}-dotnet-6.0.100
+          restore-keys: |
+            ${{ runner.os }}-dotnet-6.0.100
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.x
+          dotnet-version: "6.0.x"
           include-prerelease: true
+
       - uses: actions/setup-java@v2
         with:
           distribution: "adopt"
@@ -25,10 +34,11 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+          dotnet workload restore
+        # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
-      - name: Build
-        run: dotnet build --no-restore
+      # - name: Build
+      #   run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-restore
