--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,15 +42,17 @@ jobs:
     needs: setup
     runs-on: windows-2022
     steps:
+      - uses: actions/checkout@main
       # - name: Build
       #   run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-restore
-        
+
   format:
     needs: setup
     runs-on: windows-2022
     steps:
+      - uses: actions/checkout@main
       - name: Install format
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
 
