--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,14 +7,13 @@ on:
     branches: [main]
 
 jobs:
-  uses: Thuyen21/Blazor-Movie-/.github/workflows/setup.yml@test-action
-    with:
-      username: ${{ inputs.username }}
-      token: ${{ secrets.token }}
   build:
     runs-on: windows-2022
     steps:
-
+    - uses: ./.github/workflows/setup.yml@test-action
+        with:
+          username: ${{ inputs.username }}
+          token: ${{ secrets.envPAT }}   
       # - name: Build
       #   run: dotnet build --no-restore
       - name: Test
