--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,6 +1,13 @@
 name: setup
 on:
   workflow_call:
+    inputs:
+      username:
+        required: true
+        type: string
+    secrets:
+      envPAT:
+        required: true
 
 jobs:
   setup:
