--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,5 +1,9 @@
 name: setup
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   workflow_call:
     inputs:
       username:
