--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   setup:
-    uses: Thuyen21/Blazor-Movie-/.github/workflows/setup.yml@test-action
+    - uses: Thuyen21/Blazor-Movie-/.github/workflows/setup.yml@test-action
       with:
         username: ${{ inputs.username }}
-        token: ${{ secrets.token }}      
+        token: ${{ secrets.token }}
   build:
     needs: setup
     runs-on: windows-2022
