--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,14 +13,19 @@ jobs:
       username: crt
     secrets:
       envPAT: ${{ secrets.envPAT }}
+
+  build:
+    needs: setup
+    runs-on: windows-2022
+    
     steps:
+      uses: Thuyen21/Blazor-Movie-/.github/workflows/setup.yml@test-action
+      with:
+        username: crt
+      secrets:
+        envPAT: ${{ secrets.envPAT }}
       - uses: actions/checkout@main
-  # build:
-  #   needs: setup
-  #   runs-on: windows-2022
-  #   steps:
-  #     - uses: actions/checkout@main
-  #     # - name: Build
-  #     #   run: dotnet build --no-restore
-  #     - name: Test
-  #       run: dotnet test --no-restore
+      # - name: Build
+      #   run: dotnet build --no-restore
+      - name: Test
+        run: dotnet test --no-restore
