--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: Build .NET
 
 on:
   push:
@@ -16,9 +16,9 @@ jobs:
         with:
           path: |
             C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
-          key: ${{ runner.os }}-dotnet-6.0.100
+          key: ${{ runner.os }}-build-dotnet-6.0.100
           restore-keys: |
-            ${{ runner.os }}-dotnet-6.0.100
+            ${{ runner.os }}-build-dotnet-6.0.100
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
