--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           path: |
             C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
-          key: ${{ runner.os }}-dotnet-6.0.100
+          key: ${{ runner.os }}-format-dotnet-6.0.100
           restore-keys: |
-            ${{ runner.os }}-dotnet-6.0.100
+            ${{ runner.os }}-format-dotnet-6.0.100
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
