--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@main
-      - uses: actions/cache@v2
+      - uses: actions/checkout@v2.4.0
+      - uses: actions/cache@v2.1.7
         with:
           path: |
             C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
@@ -21,12 +21,12 @@ jobs:
             ${{ runner.os }}-build-dotnet-6.0.100
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: "6.0.x"
           include-prerelease: true
 
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2.4.0
         with:
           distribution: "adopt"
           java-version: "11"
