--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@2.4.0
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v2.1.7
         with:
           path: |
             C:\Users\runneradmin\AppData\Local\Microsoft\dotnet
@@ -20,12 +20,12 @@ jobs:
             ${{ runner.os }}-format-dotnet-6.0.100
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: "6.0.x"
           include-prerelease: true
 
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2.4.0
         with:
           distribution: "adopt"
           java-version: "11"
