--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -52,7 +52,7 @@ jobs:
           git commit -a -m 'Automated dotnet-format update'
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@3.11.0
+        uses: peter-evans/create-pull-request@v3.11.0
         with:
           title: "[housekeeping] Automated PR to fix formatting errors"
           body: |
