--- a/.gitignore
+++ b/.gitignore
@@ -207,7 +207,7 @@ PublishScripts/
 *.nuget.targets
 
 # Nuget personal access tokens and Credentials
-nuget.config
+# remove it to update beta nuget.config
 
 # Microsoft Azure Build Output
 csx/
