--- a/BlazorMovie/Server/BlazorMovie.Server.csproj
+++ b/BlazorMovie/Server/BlazorMovie.Server.csproj
@@ -32,7 +32,7 @@
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="3.6.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1-mauipre.1.21602.7" />
 		<PackageReference Include="Microsoft.ML" Version="1.7.0" />
 		<PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
