--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Install tools
         run: |
           dotnet workload restore
+          dotnet workload repair
+          dotnet workload update
         # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
