--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -35,7 +35,10 @@ jobs:
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
 
       - name: Install tools
-        run: dotnet workload restore
+        run: |
+          dotnet workload restore
+          dotnet workload repair
+          dotnet workload update
 
       - name: Dotnet Restore
         run: dotnet restore
