--- a/BlazorMovie/Maui/BlazorMovie.Maui.csproj
+++ b/BlazorMovie/Maui/BlazorMovie.Maui.csproj
@@ -15,18 +15,17 @@
 		<SignAssembly>True</SignAssembly>
 		<AnalysisLevel>preview</AnalysisLevel>
 
-		
 		<!-- Display name -->
 		<ApplicationTitle>Maui</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.Maui</ApplicationId>
+		<ApplicationId>com.companyname.maui</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<!-- Required for C# Hot Reload -->
-		<UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>
+		<UseInterpreter Condition="'$(Configuration)' == 'Debug' AND '$(TargetFramework)' != 'net6.0-ios'">True</UseInterpreter>
 
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -66,6 +65,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\MovieClient\MovieClient.csproj" />
+	  <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
