--- a/.github/workflows/heroru.yml
+++ b/.github/workflows/heroru.yml
@@ -42,6 +42,12 @@ jobs:
         with:
           source: "Dockerfile"
           target: "BlazorMovie/Server/bin/Debug/net6.0/publish/Dockerfile"
+      - name: Deploy 
+        working-directory: "./BlazorMovie/Server/bin/Debug/net6.0/publish/"
+        run: |
+          heroku container:push movie213
+          heroku container:release movie213
+
       
 
 
