--- a/.github/workflows/heroru.yml
+++ b/.github/workflows/heroru.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Deploy 
         working-directory: "./BlazorMovie/Server/bin/Debug/net6.0/publish/"
         run: |
-          heroku container:push movie213
-          heroku container:release movie213
+          heroku container:push -a movie213
+          heroku container:release -a movie213
 
       
 
