--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Deploy 
         working-directory: "./BlazorMovie/Server/bin/Debug/net6.0/publish/"
         run: |
-          ls
           heroku container:login
+          docker build
           docker ps
           heroku container:push -a movie213
           heroku container:release -a movie213
