--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -48,10 +48,8 @@ jobs:
         working-directory: "./BlazorMovie/Server/bin/Debug/net6.0/publish/"
         run: |
           heroku container:login
-          docker build
-          docker ps
-          heroku container:push -a movie213
-          heroku container:release -a movie213
+          heroku container:push
+          heroku container:release
 
       
 
