--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -42,7 +42,7 @@ jobs:
         uses: canastro/copy-file-action@master
         with:
           source: "Dockerfile"
-          target: "BlazorMovie/Server/bin/Debug/net6.0/publish/Dockerfile"
+          target: "BlazorMovie/Server/bin/Debug/net6.0/publish/Dockerfile.movie213"
       - name: Deploy 
         working-directory: "./BlazorMovie/Server/bin/Debug/net6.0/publish/"
         run: |
