--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           heroku container:login
           heroku container:push -a movie213 --recursive
-          heroku container:release -a movie213
+          heroku container:release -a movie213 --recursive
 
       
 
