--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,8 +2,10 @@ name: Format
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
+    
 jobs:
   format:
     runs-on: windows-2022
