--- a/BlazorMovie/Shared/BlazorMovie.Shared.csproj
+++ b/BlazorMovie/Shared/BlazorMovie.Shared.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<SignAssembly>true</SignAssembly>
@@ -20,16 +20,15 @@
 		<PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2601" />
 		<PackageReference Include="Google.Cloud.Firestore" Version="2.5.0" />
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="3.7.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.2" />
-		<PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="3.6.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.2-mauipre.1.22054.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.0-preview.1.22109.13" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.0-preview.1.22109.13" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0-preview.1.122076.8" />
 		<PackageReference Include="MudBlazor" Version="6.0.6" />
 		<PackageReference Include="PayoutsSdk" Version="1.1.1" />
 		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 		<PackageReference Include="PayPalHttp" Version="1.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0-preview.1.22109.13" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0-preview.1.22109.13" PrivateAssets="all" />
 	</ItemGroup>
 	
   <ItemGroup>
