--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1.9.0
         with:
-          dotnet-version: 7.x
+          dotnet-version: "7.x"
           include-prerelease: true
 
       - uses: actions/setup-java@v2.5.0
