--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Install tools
         run: |
           dotnet workload restore
+          dotnet build
 
       - name: Dotnet Restore
         run: dotnet restore
