--- a/BlazorMovie/Shared/BlazorMovie.Shared.csproj
+++ b/BlazorMovie/Shared/BlazorMovie.Shared.csproj
@@ -14,6 +14,10 @@
 		<PackageReference Include="Braintree" Version="5.11.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.2-mauipre.1.22054.8" />
 		<PackageReference Include="MudBlazor" Version="6.0.7" />
 		<PackageReference Include="PayoutsSdk" Version="1.1.1" />
