--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload restore
+          dotnet workload install maui wasm-tools
         # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
         
       - name: Restore dependencies
