--- a/BlazorMovie/Maui/BlazorMovie.Maui.csproj
+++ b/BlazorMovie/Maui/BlazorMovie.Maui.csproj
@@ -67,6 +67,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\MovieClient\MovieClient.csproj" />
 	  <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
 	</ItemGroup>
