--- a/BlazorMovie/Shared/BlazorMovie.Shared.csproj
+++ b/BlazorMovie/Shared/BlazorMovie.Shared.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Braintree" Version="5.11.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.3" />
