--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,5 +45,8 @@ jobs:
         env:
           ConnectionString: ${{ secrets.CONNECTIONSTRING }}
           SendGridKey: ${{ secrets.SENDGRIDKEY }}
-          MyEmail: ${{ secrets.MYEMAIL }}
+          Email: ${{ secrets.EMAIL }}
+          Bucket: ${{ secrets.BUCKET }}
+          FirebaseApiKey: ${{ secrets.FIREBASEAPIKEY }}
+          Password: ${{ secrets.PASSWORD }}
         run: dotnet test --no-restore
