--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -45,7 +45,10 @@ jobs:
         env:
           ConnectionString: ${{ secrets.CONNECTIONSTRING }}
           SendGridKey: ${{ secrets.SENDGRIDKEY }}
-          MyEmail: ${{ secrets.MYEMAIL }}
+          Email: ${{ secrets.EMAIL }}
+          Bucket: ${{ secrets.BUCKET }}
+          FirebaseApiKey: ${{ secrets.FIREBASEAPIKEY }}
+          Password: ${{ secrets.PASSWORD }}
         run: |
           dotnet format --no-restore --include-generated -v diag
 
