--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,8 +34,9 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload restore
-        # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+          dotnet workload install maui wasm-tools
+          # dotnet workload restore
+          # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
         
       - name: Restore dependencies
         run: dotnet restore
