--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: "6.0.x"
+          dotnet-version: "6.0.300"
           include-prerelease: true
 
       - uses: actions/setup-java@v3.1.1
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload install maui wasm-tools
+          dotnet workload install maui wasm-tools --include-previews
           # dotnet workload restore
           # dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
         
